# TermSwarmX

./: .gitignore  AXIOM_README.md  CONTRIBUTING.md  DEVDOLZ_TRANSFORMATION.md  EVOLUTION_COMPARISON.md  FINAL_SUMMARY.md  GITHUB_STRATEGY.md  IMPLEMENTATION_SUMMARY.md  ISSUES_RESOLVED.md  LAUNCH_STRATEGY.md  LICENSE  PLUGIN_DEVELOPMENT_GUIDE.md  PUBLIC_RELEASE_READY.md  PYLINT_INTEGRATION_README.md  README.md  README_ATELIER.md  README_ATELIER_ENHANCED.md  README_DEVDOLZ.md  README_DEVDOLZ_COMPLETE.md  README_ENHANCED.md  README_TUI.md  README_WHISPER_SYSTEM.md  SECURITY.md  SETUP_SECURE.md  TERMSWARMX_INTEGRATION_GUIDE.md  VERIFICATION_CHECKLIST.md  VOICE_INPUT_GUIDE.md  axiom.py  build_axiom.bat  build_axiom.sh  config.py  config_template.py  demo.py  demo_atelier.py  demo_devdollz.py  demo_enhanced.py  demo_enhanced_swarm.py  demo_enhanced_tui.py  demo_multiprocessing_swarm.py  demo_quantum_breathing.py  (+60 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_improvement.md
.github/workflows/: ci.yml
benchmarks/vs_gemini_cli/: performance_comparison.py
devdollz/: __init__.py  bypass_cli.py  cli.py  constants.py  constants_template.py  core.py  digital_twin.py  god_cli.py  god_mode.py  main.py  silicon_core.py  spine.py  spine_canvas.py  takeover.py  takeover_cli.py  termswarmx_integration.py  themes.py  twin_cli.py  ui.py  warp_bypass.py
requirements/: base.txt  dev.txt
src/: __init__.py  cli.py
src/agents/: __init__.py  base_agent.py  code_agent.py  enhanced_multiprocessing_agents.py  multiprocessing_agents.py  testing_agent.py
src/core/: __init__.py  hybrid_orchestrator.py  multiprocessing_orchestrator.py  orchestrator.py
src/ui/: textual_swarm_app.py
